# holo

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: rust-ci.yml
crates/: Cargo.toml
crates/ast/: Cargo.toml
crates/ast/src/: expression.rs  lib.rs  module.rs  statement.rs  types.rs
crates/base/: Cargo.toml  build.rs
crates/base/src/: error.rs  file_path.rs  hash.rs  lib.rs  logging.rs  markdown_suite.rs  qualified_name.rs  shared_string.rs  source_diagnostic.rs  source_file.rs  span.rs  timing.rs
crates/benchmarks/: Cargo.toml
crates/benchmarks/benches/: comprehensive_serialization.rs  shared_string_simple.rs
crates/benchmarks/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/conformance-tests/: Cargo.toml
crates/conformance-tests/src/: lib.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: daemon.rs  lib.rs
crates/db/: Cargo.toml
crates/db/src/: database.rs  legacy.rs  legacy_rocksdb.rs  lib.rs  rocksdb.rs  rocksdb_database.rs  table.rs
crates/deck/: Cargo.toml
crates/deck/src/: lib.rs
crates/engine/: Cargo.toml
crates/engine/src/: cycle.rs  engine.rs  lib.rs  observer.rs
crates/fs/: Cargo.toml
crates/fs/src/: filesystem.rs  in_memory_filesystem.rs  lib.rs  std_filesystem.rs
crates/interpreter/: Cargo.toml
crates/interpreter/src/: lib.rs  native_functions.rs  output_stream.rs
crates/ipc/: Cargo.toml
crates/ipc/src/: lib.rs
crates/ir/: Cargo.toml
crates/ir/src/: lib.rs  lowering.rs  types.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: lexer.rs  lib.rs  types.rs
crates/parser/: Cargo.toml
crates/parser/src/: api.rs  lib.rs  parser.rs  parser_state.rs  parser_tests.rs  tests.rs
crates/query/: Cargo.toml
crates/query/src/: lib.rs
crates/token/: Cargo.toml
crates/token/src/: lib.rs  tests.rs  token.rs  token_kind.rs
crates/typechecker/: Cargo.toml
crates/typechecker/src/: lib.rs
docs/: DESIGN.md  Database.md  NUMERIC-INFERENCE-AND-CONVERSIONS.md  TESTING.md  native-functions.md
docs/journal/: 2026-02-21.md  2026-02-22.md  2026-02-23.md  2026-02-24.md  2026-02-25.md  2026-02-26.md  2026-02-27.md  2026-02-28.md
docs/plans/: 2026-02-22-language-semantics-and-numeric-arithmetic-plan.md  2026-02-22-minimal-continuous-compiler-plan.md  2026-02-23-compiler-implementation-roadmap.md  2026-02-23-markdown-testing-infrastructure-plan.md  2026-02-25-comparison-operators-plan.md  2026-02-25-native-host-functions-plan.md  2026-02-27-incremental-compilation-design.md
examples/: README.md  minimal_tests.holo  native_functions.holo  showcase_failing_tests.holo  showcase_numeric_operations.holo  showcase_parse_errors.holo  showcase_success.holo  showcase_type_errors.holo  showcase_type_errors_more.holo  showcase_variables_and_functions.holo
scripts/: check-code.sh  check.sh
tests/conformance-tests/end_to_end/: basic.md  template_strings.md  test-end-to-end.md
tests/conformance-tests/interpreter/: basic.md  test-comments.md  test-interpreter.md  test-strings.md
tests/conformance-tests/parser/: basic.md  test-parser.md
tests/conformance-tests/typechecker/: basic.md  test-typechecker.md
