[package]
name = "holo-base"
version = "0.1.0"
edition = "2021"
description = "Common infrastructure for holo error handling and logging"
license = "MIT"
publish = false
build = "build.rs"

[dependencies]
ecow = { version = "0.2", features = ["serde"] }
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
