[package]
name = "holo-base"
version = "0.1.0"
edition = "2021"
description = "Common infrastructure for holo error handling and logging"
license = "MIT"
publish = false
build = "build.rs"

[dependencies]
parking_lot = "0.12"
rapidhash = "4.4.1"
relative-path = { version = "1.9", features = ["serde"] }
rkyv = { version = "0.7", features = ["derive", "smol_str"] }
serde = { version = "1", features = ["derive"] }
smol_str = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
expect-test = "1"
