[package]
name = "holo-benchmarks"
version = "0.1.0"
edition = "2021"
description = "Performance benchmarks for holo components"
license = "MIT"
publish = false

[dependencies]
holo-base = { path = "../base" }
criterion = { version = "0.5", features = ["html_reports"] }
rkyv = { version = "0.8", features = ["smol_str-0_3"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
speedy = "0.8"

[[bench]]
name = "shared_string_simple"
harness = false

[[bench]]
name = "comprehensive_serialization"
harness = false
