[package]
name = "holo-core"
version = "0.1.0"
edition = "2021"
description = "Core coordination crate for holo compilation and test execution"
license = "MIT"
publish = false

[dependencies]
bitcode = { version = "0.6", features = ["derive"] }
holo-ast = { path = "../ast" }
holo-base = { path = "../base" }
holo-db = { path = "../db" }
holo-interpreter = { path = "../interpreter" }
holo-ir = { path = "../ir" }
holo-lexer = { path = "../lexer" }
holo-parser = { path = "../parser" }
holo-query = { path = "../query" }
holo-typechecker = { path = "../typechecker" }
tracing = "0.1"
