[package]
name = "holo-engine"
version = "0.1.0"
edition = "2021"
description = "Incremental compilation engine for holo"
license = "MIT"
publish = false

[dependencies]
holo-ast = { path = "../ast" }
holo-base = { path = "../base" }
holo-db = { path = "../db" }
holo-fs = { path = "../fs" }
holo-lexer = { path = "../lexer" }
holo-parser = { path = "../parser" }
